src/test/deca/context/invalid/divide_by_0_with_var.deca
// Description : 
// 
//       Test contextuellement incorrect car division par une variable = 0.
// 
// Résultats : 
//
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par gl03

{
    int x=0;
    int y= 3/x;
}